--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ fieldset {
 	flex-direction: column;
 	align-items: center;
 
-	padding-bottom: 60px;
+	padding-bottom: 65px;
 
 	background-color: #f4f7f9;
 }
@@ -272,8 +272,8 @@ fieldset {
 	align-items: center;
 	justify-content: space-between;
 
-	padding-top: 38px;
-	padding-bottom: 30px;
+	padding-top: 47px;
+	padding-bottom: 38px;
 	padding-left: 63px;
 }
 
@@ -285,6 +285,7 @@ fieldset {
     color: #ee3643;
 
     width: 200px;
+    margin: 0;
 }
 
 .header_adress-tel-number {
@@ -363,12 +364,15 @@ fieldset {
 }
 
 .header_user-info {
-	margin-top: 28px;
+	margin-top: 10px;
+	margin-left: -20px;
 }
 
 .header_profile-button {
 	padding-left: 13px;
-	padding-right: 27px;
+	padding-right: 22px;
+	padding-top: 10px;
+	padding-bottom: 11px;
 }
 
 .header_profile-button:focus {
@@ -395,10 +399,10 @@ fieldset {
 }
 
 .header_sign-out-button {
-	padding-top: 12px;
+	padding-top: 10px;
 	padding-right: 10px;
 	padding-left: 10px;
-	padding-bottom: 12px;
+	padding-bottom: 11px;
 }
 
 .header_sign-out-button:focus {
@@ -426,13 +430,16 @@ fieldset {
 }
 
 .header__user-info-list-item {
-	margin: 15px 15px;
+	margin-top: 13px;
+	margin-bottom: 0;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 .header__user-info-list-item:not(:last-child)::after {
 	content: "";
 	position: absolute;
-	top: 25px;
+	top: 23px;
 	left: 103px;
 	width: 4px;
 	height: 4px;
@@ -663,6 +670,7 @@ fieldset {
 .catalog-item {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 
 	position: relative;
 
@@ -680,7 +688,8 @@ fieldset {
 	line-height: 20px;
 	color: #000000;
 
-	margin-top: 10px;
+	margin-top: 9px;
+	width: 160px;
 }
 
 .catalog-item-image {
@@ -702,7 +711,6 @@ fieldset {
 	text-decoration: line-through;
 
 	margin-bottom: 0;
-	margin-left: 8px;
 	margin-top: 12px;
 }
 
@@ -714,18 +722,20 @@ fieldset {
 	color: #ffffff;
 
     width: 141px;
-    margin-top: 10px;
+    margin-top: 9px;
     margin-left: 42px;
     margin-right: 35px;
-    margin-bottom: 20px;
-    padding: 11px 30px;
+    margin-bottom: 18px;
+    padding: 11px;
+    padding-left: 27px;
+    padding-right: 33px;
   
     background-color: #ee3643;
     border-radius: 3px;
 }
 
 .catalog-item-new-price:nth-child(3) {
-	margin-top: 40px;
+	margin-top: 39px;
 }
 
 .catalog-item-new-price::after {
@@ -774,8 +784,8 @@ fieldset {
 	border-radius: 3px;
 
 	width: 135px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 12px;
+	padding-bottom: 8px;
 	margin-bottom: 8px;
 }
 
@@ -1012,7 +1022,7 @@ fieldset {
 .breadcrumbs {
 	display: flex;
 	list-style: none;
-	padding-top: 23px;
+	padding-top: 21px;
 }
 
 .breadcrumbs__item {
@@ -1025,8 +1035,8 @@ fieldset {
 	width: 9px;
 	height: 12px;
 	margin-bottom: -2px;
-	margin-left: 15px;
-	margin-right: 15px;
+	margin-left: 13px;
+	margin-right: 17px;
 	background-image: url("../img/icon-right-small.svg");
 
 }
@@ -1100,7 +1110,7 @@ fieldset {
 }
 
 .catalog-filter-title {
-	padding: 10px 18px;
+	padding: 10px 20px;
 	margin: 0;
 }
 
@@ -1154,7 +1164,7 @@ legend.catalog-filter_section-title::before {
     text-transform: uppercase;
     color: #000000;
 
-    margin-top: 13px;
+    margin-top: 11px;
     margin-bottom: 13px;
 }
 
@@ -1192,12 +1202,14 @@ legend.catalog-filter_section-title::before {
 	z-index: 2;
 	top: 30px;
 	left: 20px;
+	cursor: pointer;
 }
 
 .filter-button-second {
 	position: absolute;
 	top: 30px;
 	left: 160px;
+	cursor: pointer;
 }
 
 .catalog-filter_brand-name,
@@ -1211,7 +1223,7 @@ legend.catalog-filter_section-title::before {
     text-transform: uppercase;
     color: #000000;
 
-    margin-bottom: 16px;
+    margin-bottom: 17px;
 }
 
 .catalog-filter_brand-name img,
@@ -1364,13 +1376,13 @@ legend.catalog-filter_section-title::before {
 .pagination-list {
 	display: flex;
 
-	margin-top: 65px;
+	margin-top: 53px;
 	margin-bottom: 60px;
 }
 
 .pagination-item a{
 	display: block;
-	padding: 10px 16px;
+	padding: 10px 15px;
 	border-radius: 3px;
 	margin-right: 10px;
 }
@@ -1582,7 +1594,7 @@ legend.catalog-filter_section-title::before {
 	transform: translate(-50%, -50%);
 
 	width: 620px;
-	padding-top: 48px;
+	padding-top: 45px;
 
 	background-color: #ffffff;
 
@@ -1595,7 +1607,7 @@ legend.catalog-filter_section-title::before {
 
 	padding-left: 80px;
 	padding-right: 80px;
-	padding-bottom: 22px;
+	padding-bottom: 18px;
 }
 
 .form-block-full {
@@ -1610,7 +1622,7 @@ legend.catalog-filter_section-title::before {
 	line-height: 19px;
 	color: #000000;
 
-	padding-bottom: 13px;
+	padding-bottom: 11px;
 }
 
 .mail-form-input {
@@ -1673,7 +1685,7 @@ legend.catalog-filter_section-title::before {
 }
 
 .form-block__button {
-	margin-top: 37px;
+	margin-top: 34px;
 }
 
 .form-block__button button{
@@ -1683,11 +1695,11 @@ legend.catalog-filter_section-title::before {
 }
 
 .modal-map {
-	display: none;
 	padding-top: 0;
 	width: 940px;
 
 	box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.5);
+	border-top: none;
 }
 
 .modal-map img {
@@ -1761,6 +1773,8 @@ legend.catalog-filter_section-title::before {
 	width: 21px;
 	height: 21px;
 	background-image: url("../img/cross-red.svg");
+
+	cursor: pointer;
 }
 
 
